<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <LinearLayout
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
	    <TextView
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_gravity="center"
	    android:gravity="center_horizontal"
	    android:text="@string/alert_info"
	    />
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    	<Button
	    	android:layout_width="80dp"
	    	android:layout_height="50dp"
	    	android:id="@+id/button_to_delay"
	    	android:text="@string/delay">
	    	</Button>
	    	<Button
	    	android:layout_width="80dp"
	    	android:layout_height="50dp"
	    	android:id="@+id/button_to_stop"
	    	android:text="@string/stop">
	    	</Button>
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>